# libgxps

./: .gitattributes  AUTHORS  MAINTAINERS  Makefile.am  NEWS  RELEASING  TODO  autogen.sh  configure.ac  libgxps.doap  libgxps.pc.in  meson.build  meson_options.txt
docs/: Makefile.am  meson.build
docs/reference/: Makefile.am  libgxps-docs.sgml  libgxps-sections.txt  libgxps.types  meson.build
docs/tools/: Makefile.am  meson.build  xpstojpeg.xml  xpstopdf.xml  xpstopng.xml  xpstops.xml  xpstosvg.xml
libgxps/: Makefile.am  Makefile.sources  gxps-archive.c  gxps-archive.h  gxps-brush.c  gxps-brush.h  gxps-color.c  gxps-color.h  gxps-core-properties.c  gxps-core-properties.h  gxps-debug.c  gxps-debug.h  gxps-document-structure.c  gxps-document-structure.h  gxps-document.c  gxps-document.h  gxps-error.c  gxps-error.h  gxps-file.c  gxps-file.h  gxps-fonts.c  gxps-fonts.h  gxps-glyphs.c  gxps-glyphs.h  gxps-images.c  gxps-images.h  gxps-links.c  gxps-links.h  gxps-matrix.c  gxps-matrix.h  gxps-page-private.h  gxps-page.c  gxps-page.h  gxps-parse-utils.c  gxps-parse-utils.h  gxps-path.c  gxps-path.h  gxps-private.h  gxps-resources.c  gxps-resources.h  (+3 more)
mesonscripts/: release.sh
nmake/: Makefile.am  Makefile.vc  README.txt  build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  generate-msvc.mak  info-msvc.mak  install.mak
regtest/: HTMLReport.py  Printer.py  Test.py  TestReferences.py  TestRun.py  Utils.py  main.py
regtest/commands/: __init__.py
test/: Makefile.am  meson.build  test-gxps.c
tools/: Makefile.am  Makefile.sources  gxps-converter-main.c  gxps-converter.c  gxps-converter.h  gxps-image-converter.c  gxps-image-converter.h  gxps-image-writer.c  gxps-image-writer.h  gxps-jpeg-converter.c  gxps-jpeg-converter.h  gxps-jpeg-writer.c  gxps-jpeg-writer.h  gxps-pdf-converter.c  gxps-pdf-converter.h  gxps-png-converter.c  gxps-png-converter.h  gxps-png-writer.c  gxps-png-writer.h  gxps-print-converter.c  gxps-print-converter.h  gxps-ps-converter.c  gxps-ps-converter.h  gxps-svg-converter.c  gxps-svg-converter.h  meson.build
